components/checkout-module/client/styles/input.scss
$width: 350px;
$height: 50px;
$font-family: Arial, Helvetica, sans-serif;
$border-bot: 1px solid rgb(218, 216, 216);
$button-size: 24px;
$small-font: 13px;

.checkout-modal {
    position: absolute;
    top: 40%;
    left: 50%;
    right: auto;
    bottom: auto;
    transform: translate(-40%, -50%);
    background-color: white;
    padding: 18px;
    height: auto;
    border: 1px solid rgb(206, 206, 206);
    outline: none;
}

@mixin position($position, $top: null, $right: null, $bottom: null, $left: null) {
    position: $position;
    top: $top;
    right: $right;
    bottom: $bottom;
    left: $left;
}

#app {
    background-color: white;
}
@media screen and (max-width: 1199px) {
    #app {
        @include position(fixed, $bottom: 0px);
        width: 100%;
        display: inline-flex;
        justify-content: center;     
        text-align: center;
        font-family: $font-family;
        border-top: 1px solid rgb(206, 206, 206);
        height: 75px;
        background-color: white;
        z-index: 6;
    }
}

@media screen and (min-width: 1200px) {
    #app {
        position: sticky;
        top: 20px;
        margin-top: 20px;
        width: $width;
        height: auto;
        justify-content: center;
        text-align: center;
        font-family: $font-family;
        border: 1px solid rgb(206, 206, 206);
    }
}

.price {
    font-weight: bold;
    font-size: 22px;
}

.header {
    margin: 18px auto 18px auto;
    font-size: $small-font;
    padding-bottom: 18px;
    width: $width * .9;
    text-align: left;
    border-bottom: $border-bot;   
    
    .reviews {
        display: flex;
        justify-content: left;
        align-items: center;
        
        div {
            margin-right: 5px;
        }
    }
}


.footer {
    display: flex;
    width: 500px;
    justify-content: space-between;

    .header {
        justify-content: center;
        text-align: center;
        border-bottom: none;
        width: auto;
        margin-right: 40px;

        .reviews {
            justify-content: center;
        }
    }

    .sub-but {
        width: $width * .9;
        height: $height;
        margin: 10px 0px 10px 0px;
        background-color: rgb(248, 125, 125);
        font-size: 18px;
        color: white;
        border-radius: 8px;
        border: none;
        
        &:focus{
            outline: 0;
        }
    }
}


.text-header {
    margin: 18px auto 5px auto;
    justify-content: center;
    font-size: $small-font;
    width: $width * .9;
    text-align: left;
}


.form-form {
    margin: 0px auto 0px auto;
    width: $width * .9;

    .form-line {
        display: flex;
        align-items: center;
        justify-content: space-between;
        height: $height;
        border-bottom: $border-bot;
        color: rgb(90, 90, 90);

        .line-value {
            display: flex;
            width: 100px;
            justify-content: space-between;
            
            button {
                height: $button-size;
                width: $button-size;
                border-radius: 50%;
                color: red;
                border: 1px solid red;
                
                &:focus {
                    outline: 0;
                }
            }
        }
    }
    .form-total {
        @extend .form-line;
        font-weight: bold;
        border: none;
        color: black;
    }
}



.info {
    color: rgb(90, 90, 90);
    font-size: $small-font;
    padding: 0px 0px 10px 10px;
}


.sub-but {
    width: $width * .9;
    height: $height;
    margin: 10px 0px 10px 0px;
    background-color: rgb(248, 125, 125);
    font-size: 18px;
    color: white;
    border-radius: 8px;
    border: none;
}


.warning {
    font-size: 18px;
    margin: 18px 0px 0px 0px;
}

.close-but {
    height: 40px;
    width: 40px;
    text-align: center;
    justify-content: center;
    border-radius: 50%;

    &:focus{
        outline: 0;
    }
}

#container {
    margin-top: 20px !important;
    margin-bottom: 10px;
}

@media screen and (max-width: 1149px) {
    #container {
        
        margin: 20px 0px 0px 0px !important;
    }
}

@media screen and (min-width: 1150px) {
    #container {
        margin: auto auto 20px auto !important;
    }
}

.checkout-overlay {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(255, 255, 255, 0.75);
    z-index: 6;
}

.footer {
    display: flex;
    width: 500px;
    justify-content: space-between;

    .header {
        justify-content: center;
        text-align: center;
        border-bottom: none;
        width: auto;
        margin-right: 40px;

        .reviews {
            justify-content: center;
        }
    }

    .sub-but {
        width: $width * .9;
        height: $height;
        margin: 10px 0px 10px 0px;
        background-color: rgb(248, 125, 125);
        font-size: 18px;
        color: white;
        border-radius: 8px;
        border: none;
        
        &:focus{
            outline: 0;
        }
    }
}

@media screen and (max-width: 576px) {
    .sub-but {
        max-width: 40% !important;
        margin: auto auto auto 10px !important;
    }
    .footer {
        .header {
            margin: auto 10px auto auto;
        }
    }
}

